syntax = "proto2";
import "nanopb.proto";

// Enumeration for representing the status of network connections.
enum NetworkStatus {
  DISCONNECTED = 0; // Indicates that the network is disconnected.
  CONNECTED = 1;    // Indicates that the network is connected.
}

// Enum specifying different memory areas used by the system.
enum MemoryAreas {
  INVALID_MEMORY_AREA = 0;                 // Represents an invalid or uninitialized memory area.
  NETWORK_CREDENTIALS = 1;                 // Memory area allocated for storing network credentials.
  NETWORK_INFORMATION = 2;                 // Memory area for storing the information of network connections.
  ACCESS_POINT_STATUS = 3;                 // Memory area for storing the status of ap connection.
  STATION_STATUS = 4;                      // Memory area for storing the status of sta connection.
  BROKER_CONFIG = 5;                       // Memory area dedicated to broker configuration settings.
  UART_SINGLE_PACKET = 6;                  // Memory area for configurations of single UART packets.
  UART_CONTINUOS_PACKET = 7;               // Memory area used for communication configuration UART settings.
  LORA_SINGLE_PACKET = 8;                  // Memory area for configurations of single LoRa packets.
  LORA_CONTINUOS_PACKET = 9;               // Memory area used for communication configuration LORA settings.
  TIME_PROCESS = 10;                       // Memory Area used for time process stores the time since boot.
}

// Message representing network credentials required to connect to a Wi-Fi network.
message NetworkCredentials {
    // The SSID (Service Set Identifier) of the Wi-Fi network.
    required string ssid = 1 [(nanopb).max_size = 32];

    // The password for the Wi-Fi network.
    required string password = 2 [(nanopb).max_size = 64];
}

// Message containing information about the Access Point (AP) mode of the ESP32.
message AccessPointInformation {
    // IP address of the ESP32 in AP mode (IPv4). Max length is 15 characters (e.g., "192.168.4.1").
    required string ip_address = 1 [(nanopb).max_size = 15];
    
    // SSID (name) of the AP. Max length is 32 characters (common max SSID length).
    required string ssid = 2 [(nanopb).max_size = 32];
    
    // Number of devices currently connected to the AP.
    required uint32 connected_devices = 3;
}

// Message containing information about the Station (STA) mode of the ESP32.
message StationInformation {
    // IP address of the ESP32 in STA mode (IPv4). Max length is 15 characters.
    required string ip_address = 1 [(nanopb).max_size = 15];
    
    // SSID of the Wi-Fi network the ESP32 is connected to in STA mode. Max length is 32 characters.
    required string ssid = 2 [(nanopb).max_size = 32];
    
    // Signal strength (RSSI) of the connected network, measured in dBm.
    required int32 signal_strength = 3;
    
    // Boolean flag indicating whether the ESP32 is currently connected to a Wi-Fi network in STA mode.
    required bool is_connected = 4;
}

// Message representing the current status of both AP and STA network connections on the ESP32.
message NetworkInformation {
    // Access Point information (AP mode).
    required AccessPointInformation ap = 1;
    
    // Station information (STA mode).
    required StationInformation sta = 2;
    
    // MAC address of the ESP32. Max length is 17 characters (formatted as "XX:XX:XX:XX:XX:XX").
    required string mac_address = 3 [(nanopb).max_size = 17];
    
    // Hostname of the ESP32 device. Max length is 64 characters.
    required string hostname = 4 [(nanopb).max_size = 64];
}

// Message containing status about the Access Point (AP), indicating if it's connected or not.
message AccessPointStatus {
    required NetworkStatus status = 1;
}

// Message containing status about the Station (STA), indicating if it's connected to a network.
message StationStatus {
    required NetworkStatus status = 1;
}

// Message representing configuration details for the broker.
message BrokerConfig {
    // URI of the broker to which the device will connect.
    required string broker_uri = 1 [(nanopb).max_size = 256];
}

// Message representing a packet request; write to this area to read some area in memory.
message PacketRequest {
    // The address to which this packet should be sent.
    required int32 destination_address = 1;

    // The memory area in the destination device that will store the received information.
    required MemoryAreas destination_area = 2;

    // The area that should be sent to the destination device.
    required MemoryAreas requested_area = 3;

    // The time interval (in milliseconds) between the packets.
    required uint32 packet_interval = 4;

    // The time the last transmission occurred (in Unix timestamp format).
    required uint64 last_transmission = 5;
}

// Message representing a list of continuous packet requests including multiple packet configurations.
message ContinuosPacketList {
    // Repeated field of packet requests, with a maximum count of 8.
    repeated PacketRequest packet_configs = 1 [(nanopb).max_count = 8];
}

// Message that represents the time since the boot of the device
message TimeProcess {
    /**
     * The raw time in microseconds since the boot of the device.
     * This provides the precise timestamp at which the data was recorded.
     */
    required uint64 raw_time = 1;

    /**
     * The elapsed time in seconds since the event or boot.
     * This field indicates how many whole seconds have passed.
     */
    required uint32 seconds = 2;

    /**
     * The elapsed time in minutes since the event or boot.
     * This field indicates how many whole minutes have passed.
     */
    required uint32 minutes = 3;

    /**
     * The elapsed time in hours since the event or boot.
     * This field indicates how many whole hours have passed.
     */
    required uint32 hours = 4;
}

// Message defining the different memory areas and their corresponding structures.
message MemoryAreasDefinitions {
    // Network credentials for connecting to a Wi-Fi network.
    required NetworkCredentials network_credentials = 1;

    // Network information of the AP and STA connections.
    required NetworkInformation network_information = 2;

    // Status information of Access Point connection.
    required AccessPointStatus ap_status = 3;

    // Status information of Status connection.
    required StationStatus sta_status = 4;

    // Configuration settings for the broker.
    required BrokerConfig broker_config = 5;

    // Packet request for UART communication.
    required PacketRequest uart_packet_request = 6;
    
    // Continuous packet configurations for UART communication.
    required ContinuosPacketList uart_continuos_packet = 7;

    // Packet request for LoRa communication.
    required PacketRequest lora_packet_request = 8;

    // Continuous packet configurations for LORA communication.
    required ContinuosPacketList lora_continuos_packet = 9;

    // Struct that stores the time since device boot.
    required TimeProcess time_process = 10;
}